--- a/NetCore.Domain/NetCore.Domain.csproj
+++ b/NetCore.Domain/NetCore.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.0.2" />
+  </ItemGroup>
+
 </Project>
