--- a/NetCore.Api/Properties/launchSettings.json
+++ b/NetCore.Api/Properties/launchSettings.json
@@ -23,6 +23,7 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "launchUrl": "swagger",
+      //"launchUrl": "client",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -31,6 +32,7 @@
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      //"launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/client",
       "publishAllPorts": true,
       "useSSL": true
     }
