feat: Abstração da interface IUnitOfWork

--- a/NetCore.Infra/NetCore.Infra.csproj
+++ b/NetCore.Infra/NetCore.Infra.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NetCore.Domain\NetCore.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
