--- a/NetCore.Api/NetCore.Api.csproj
+++ b/NetCore.Api/NetCore.Api.csproj
@@ -1,21 +1,25 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>464ee0c8-3a3b-4e30-aceb-db8f5bcf997b</UserSecretsId>
+    <UserSecretsId>c65ae977-a7a6-4af3-b45c-025016b4776d</UserSecretsId>
     <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\NetCore.Application\NetCore.Application.csproj" />
+    <ProjectReference Include="..\NetCore.Domain\NetCore.Domain.csproj" />
+    <ProjectReference Include="..\NetCore.Infra\NetCore.Infra.csproj" />
   </ItemGroup>
+
+	
 
 </Project>
