--- a/NetCore.Api/appsettings.Development.json
+++ b/NetCore.Api/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "Connectiontrings": {
+    "OliConnection": "Server=V-DEVSERVER;Database=OlifransPVC;Trusted_Connection=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
