--- a/NetCore.Api/appsettings.json
+++ b/NetCore.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Connectiontrings": {
+    "OliConnection": "Server=V-DEVSERVER;Database=OlifransPVC;Trusted_Connection=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +10,4 @@
     }
   },
   "AllowedHosts": "*"
-   
 }
